Final Update CSS/ HTML mthalacker1.html

--- a/people/mthalacker1.html
+++ b/people/mthalacker1.html
@@ -18,60 +18,63 @@
         <hr>
         <nav id="nav_list_miah">
           <ul>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#achievements">Achievements</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#social">Social Links</a></li>
+            <li><a href="https://twitter.com/miah74me">Twitter</a></li>
+            <li><a href="https://plus.google.com/+MiahWalley">Google</a></li>
+            <li><a href="https://github.com/MThalacker1">Github</a></li>
           </ul>
         </nav> 
         <article>
           <section>
-                <h2 class="heading_miah"><a name="experience">Experience</a></h2>
-                <p>
-                  Experienced in object-oriented
-                  programming; developing, testing and debugging code; 
-                  designing interfaces; and administering systems and networks.
-                  Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
-                  loin. Cow beef ribs ball tip sirloin sausage pork belly
-                  capicola ham hock pancetta. Drumstick rump pancetta, pig
-                  sausage tenderloin pork chop jerky cow. Meatball pork chop
-                  beef ribs chicken landjaeger pork. Ground round turkey
-                  turducken kevin short loin tongue doner. Salami andouille
-                  picanha, pork loin t-bone tail landjaeger cupim. Chicken
-                  filet mignon capicola spare ribs landjaeger, salami pancetta
-                  ham hock rump strip steak meatball kevin tenderloin swine.
-                  Sirloin cupim short loin swine, doner picanha bacon. Venison
-                  pancetta rump drumstick beef. Ball tip tongue turducken
-                  kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
-                  chuck ground round chicken andouille. Biltong corned beef
-                  spare ribs sirloin, filet mignon turducken fatback.
-                </p>
-                <h2 class="heading_miah"><a name="achievements">Achievements</a></h2>
-                <h2 class="heading_miah"><a name="education">Education</a></h2>
-                <p>
-                  Currently enrolled in the IT-Software Developer Program at CVTC
-                  with anticipated graduation in May 2016.
-                  Enrolled in a secondary degree program: IT Network Specialist
-                </p>
-                <h2 class="heading_miah"><a name="skills">Skills</a></h2>
-                  <ul>
-                    <li>
-                      Extensive customer service skills. 
-                    </li>
-                    <li>
-                      Leadership and training.
-                    </li>
-                  </ul>
-                <h2 class="heading_miah"><a name="social">Social Links</a></h2>
-                <p>
-                  Twitter, Facebook, Github
-                </p>
+            <h2 class="heading_miah"><a name="experience">Experience</a></h2>
+            <hr>
+            <h4>2014 to Present</h4>
+            <p>
+              Group Health Cooperative of Eau Claire<br>
+              Computer Operator
+            </p>
+            <ul>
+              <li>Automatiion of tasks using PowerShell</li>
+              <li>Web automation for file downloads</li>
+              <li>Website Updates</li>
+              <li>Research and Testing of proposed technologies</li>
+              <li>Create and maintain FTP accounts</li>
+              <li>Create and Update documentation</li>
+            </ul>
+            <h4>2009 to 2014</h4>
+            <p>
+              Ebay Enterprise, Inc.<br>
+              Customer Service Representative
+            </p>
+            <ul>
+              <li>Customer Service via phone and email</li>
+              <li>Training new hires</li>
+              <li>Team lead, reviewing representative performance</li>
+            </ul>
+            <h2 class="heading_miah"><a name="education">Education</a></h2>
+            <hr>
+              <h3>Chippewa Valley Technical College</h3>
+              <p>
+              Information Technology - Software Developer<br>
+              Associates Degree anticipated May 2016.<br>
+              Minor Program: IT - Network Specialist
+              
+            </p>
+            <h2 class="heading_miah"><a name="skills">Skills</a></h2>
+            <hr>
+              <ul>
+                <li>
+                  Languages: Java, C#, PHP, Ruby, JavaScript, and PowerShell
+                </li>
+                <li>
+                  Tools: Visual Studio, Eclipse, NetBeans
+                </li>
+                <li>
+                  Other Technologies: SQL, SASS/SCSS, CSS, Jquery
+                </li>
+              </ul>
           </section> 
         </article>
+        <a href="../index.html">Return to the Home Page</a>
       </div>
-    <script type="text\javascript">
-    
-    </script>
   </body>
 </html>
