--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li><a href="people/jstodola.html">Jessica Stodola</a></li>
           <li><a href="people/tsweitzer.html">Teia Sweitzer</a></li>
           <li><a href="people/jtalford4.html">Joshua Talford</a></li>
+          <li><a href="people/mthalacker1.html">Miah Thalacker</a></li>
           <li><a href="people/dvanslambrouck1.html">David Van SlamBrouck</a></li>
         </ul>
       </main>
